--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -111,138 +111,11 @@
       <section class="commit-history">
         <div class="page__heading page__heading_about">
           <h2 class="page__title">История коммитов из GitHub</h2>
-          <a class="page__link page__link_git" href="https://github.com/">Открыть в Github &#62;</a>
+          <a class="page__link page__link_git" href="https://github.com/Aksestl/NewsAnalyzer">Открыть в Github &#62;</a>
         </div>
 
         <div class="flickity">
-          <a class="flickity__card pointer">
-            <p class="flickity__data card__data">14 августа 2019</p>
-            <div class="flickity__block">
-              <img class="flickity__avatar" src="<%=require('../images/image-01.png').default%>" alt="author's photo">
-              <div class="flickity__about">
-                <h3 class="flickity__name">Антон Долинин</h3>
-                <p class="flickity__email">anton@yandex.ru</p>
-              </div>
-            </div>
-            <p class="flickity__info">Emmet (formerly Zen Coding) is a web- developer’s 
-              toolkit that can greatly improve your HTML & CSS workflow.
-            </p>
-          </a>
-
-          <a class="flickity__card pointer">
-            <p class="flickity__data card__data">14 августа 2019</p>
-            <div class="flickity__block">
-              <img class="flickity__avatar" src="<%=require('../images/image-04.png').default%>" alt="author's photo">
-              <div class="flickity__about">
-                <h3 class="flickity__name">Мария Фёдорова</h3>
-                <p class="flickity__email">mariiifed@yandex.ru</p>
-              </div>
-            </div>
-            <p class="flickity__info">You can install this plugin directly from NetBeans Plugin Portal:
-              in NetBeans, open Tools > Plugins > Available plugins and find and install Emmet plugin.
-            </p>
-          </a>
-
-          <a class="flickity__card pointer">
-            <p class="flickity__data card__data">14 августа 2019</p>
-            <div class="flickity__block">
-              <img class="flickity__avatar" src="<%=require('../images/image-03.png').default%>" alt="author's photo">
-              <div class="flickity__about">
-                <h3 class="flickity__name">Инга Иванова</h3>
-                <p class="flickity__email">ingaiva@yandex.ru</p>
-              </div>
-            </div>
-            <p class="flickity__info">With Emmet, you can type CSS-like expressions that can be dynamically 
-              parsed, and produce output depending on what you type in the abb...
-            </p>
-          </a>
-
-          <a class="flickity__card pointer">
-            <p class="flickity__data card__data">14 августа 2019</p>
-            <div class="flickity__block">
-              <img class="flickity__avatar" src="<%=require('../images/image-01.png').default%>" alt="author's photo">
-              <div class="flickity__about">
-                <h3 class="flickity__name">Антон Долинин</h3>
-                <p class="flickity__email">anton@yandex.ru</p>
-              </div>
-            </div>
-            <p class="flickity__info">Emmet (formerly Zen Coding) is a web- developer’s 
-              toolkit that can greatly improve your HTML & CSS workflow.
-            </p>
-          </a>
-
-          <a class="flickity__card pointer">
-            <p class="flickity__data card__data">14 августа 2019</p>
-            <div class="flickity__block">
-              <img class="flickity__avatar" src="<%=require('../images/image-03.png').default%>" alt="author's photo">
-              <div class="flickity__about">
-                <h3 class="flickity__name">Инга Иванова</h3>
-                <p class="flickity__email">ingaiva@yandex.ru</p>
-              </div>
-            </div>
-            <p class="flickity__info">With Emmet, you can type CSS-like expressions that can be dynamically 
-              parsed, and produce output depending on what you type in the abb...
-            </p>
-          </a>
-
-          <a class="flickity__card pointer">
-            <p class="flickity__data card__data">14 августа 2019</p>
-            <div class="flickity__block">
-              <img class="flickity__avatar" src="<%=require('../images/image-01.png').default%>" alt="author's photo">
-              <div class="flickity__about">
-                <h3 class="flickity__name">Антон Долинин</h3>
-                <p class="flickity__email">anton@yandex.ru</p>
-              </div>
-            </div>
-            <p class="flickity__info">Emmet (formerly Zen Coding) is a web- developer’s 
-              toolkit that can greatly improve your HTML & CSS workflow.
-            </p>
-          </a>
-
-          <a class="flickity__card pointer">
-            <p class="flickity__data card__data">14 августа 2019</p>
-            <div class="flickity__block">
-              <img class="flickity__avatar" src="<%=require('../images/image-03.png').default%>" alt="author's photo">
-              <div class="flickity__about">
-                <h3 class="flickity__name">Инга Иванова</h3>
-                <p class="flickity__email">ingaiva@yandex.ru</p>
-              </div>
-            </div>
-            <p class="flickity__info">With Emmet, you can type CSS-like expressions that can be dynamically 
-              parsed, and produce output depending on what you type in the abb...
-            </p>
-          </a>
-
-          <a class="flickity__card pointer">
-            <p class="flickity__data card__data">14 августа 2019</p>
-            <div class="flickity__block">
-              <img class="flickity__avatar" src="<%=require('../images/image-01.png').default%>" alt="author's photo">
-              <div class="flickity__about">
-                <h3 class="flickity__name">Антон Долинин</h3>
-                <p class="flickity__email">anton@yandex.ru</p>
-              </div>
-            </div>
-            <p class="flickity__info">Emmet (formerly Zen Coding) is a web- developer’s 
-              toolkit that can greatly improve your HTML & CSS workflow.
-            </p>
-          </a>
-
-          <a class="flickity__card pointer">
-            <p class="flickity__data card__data">14 августа 2019</p>
-            <div class="flickity__block">
-              <img class="flickity__avatar" src="<%=require('../images/image-03.png').default%>" alt="author's photo">
-              <div class="flickity__about">
-                <h3 class="flickity__name">Инга Иванова</h3>
-                <p class="flickity__email">ingaiva@yandex.ru</p>
-              </div>
-            </div>
-            <p class="flickity__info">With Emmet, you can type CSS-like expressions that can be dynamically 
-              parsed, and produce output depending on what you type in the abb...
-            </p>
-          </a>
-
-        </div>
-
+        
         <div class="button__area button__area_git">
           <button class="button button__git pointer">Открыть в Github</button>
         </div>
