--- a/src/pages/statistics.html
+++ b/src/pages/statistics.html
@@ -31,14 +31,15 @@
           <span class="page__title_stat page__title_stat_subtitle">/ Аналитика</span>
         </h2>
         
-        <h3 class="page__title">Вы спросили:
-          <span class="page__title">«Путешествия»</span>
+        <h3 class="page__title">Вы спросили: «
+          <span class="page__title page__title_capitalize search-word"></span>
+          »
         </h3>
         <p class="page__title_stat">Новостей за неделю:
-          <span class=" page__title_stat_bold">34 324</span>
+          <span class="page__title_stat_bold total-result"> </span>
         </p>
-        <p class="page__title_stat">Упоминаний в загаловках:
-          <span class=" page__title_stat_bold">235</span>
+        <p class="page__title_stat">Упоминаний в заголовках:
+          <span class=" page__title_stat_bold week-result"> </span>
         </p>
       </section>
 
@@ -49,7 +50,7 @@
         <div class="chart__scale-name">
           <div class="chart__data">
             <p class="chart__point chart__point_day">Дата</p>
-            <p class="chart__point chart__point_day">(август)</p>
+            <p class="chart__point chart__point_day current-month">( <span class="current-month"> </span> )</p>
           </div>
           <p class="chart__point">Кол-во упоминаний</p>
         </div>
