js stat page done

--- a/src/pages/statistics.html
+++ b/src/pages/statistics.html
@@ -50,7 +50,7 @@
         <div class="chart__scale-name">
           <div class="chart__data">
             <p class="chart__point chart__point_day">Дата</p>
-            <p class="chart__point chart__point_day current-month">( <span class="current-month"> </span> )</p>
+            <p class="chart__point chart__point_day">( <span class="current-month"> </span> )</p>
           </div>
           <p class="chart__point">Кол-во упоминаний</p>
         </div>
@@ -67,32 +67,32 @@
 
           <li class="chart__block">
             <div class="chart__item"> 
-              <span class="chart__day">19, пн</span>
-              <div class="chart__point chart__point_pipe chart__pipe">15</div>
+              <span class="chart__day"> </span>
+              <div class="chart__point chart__pipe"></div>
             </div>
             <div class="chart__item"> 
-              <span class="chart__day">20, вт</span>
-              <div class="chart__point chart__point_pipe chart__pipe">18</div>
+              <span class="chart__day"> </span> 
+              <div class="chart__point chart__pipe"></div>
             </div>
             <div class="chart__item"> 
-              <span class="chart__day">21, ср</span>
-              <div class="chart__point chart__point_pipe chart__pipe">11</div>
+              <span class="chart__day"> </span> 
+              <div class="chart__point chart__pipe"></div>
             </div>
             <div class="chart__item"> 
-              <span class="chart__day">22, чт</span>
-              <div class="chart__point chart__point_pipe chart__pipe">39</div>
+              <span class="chart__day"> </span>
+              <div class="chart__point chart__pipe"></div>
             </div>
             <div class="chart__item"> 
-              <span class="chart__day">23, пт</span>
-              <div class="chart__point chart__point_pipe chart__pipe">45</div>
+              <span class="chart__day"> </span>
+              <div class="chart__point chart__pipe"></div>
             </div>
             <div class="chart__item"> 
-              <span class="chart__day">24, сб</span>
-              <div class="chart__point chart__point_pipe chart__pipe">73</div>
+              <span class="chart__day"> </span>
+              <div class="chart__point chart__pipe"></div>
             </div>
             <div class="chart__item"> 
-              <span class="chart__day">25, вс</span>
-              <div class="chart__point chart__point_pipe chart__pipe">34</div>
+              <span class="chart__day"> </span>
+              <div class="chart__point chart__pipe"></div>
             </div>
           </li>
 
