form and chart fixed

--- a/src/pages/statistics.html
+++ b/src/pages/statistics.html
@@ -66,33 +66,33 @@
           </li>
 
           <li class="chart__block">
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span> 
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span> 
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
           </li>
 
