--- a/statistics.html
+++ b/statistics.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Aksenova Alena">
   <title>Statistics</title>
   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./styles/styles.e18e4a94d261c60272c1.css">
+  <link rel="stylesheet" href="./styles/styles.ca0fa5dd1aaab1f8eb23.css">
 
 </head>
 <body>
@@ -66,33 +66,33 @@
           </li>
 
           <li class="chart__block">
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span> 
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span> 
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
-            <div class="chart__item"> 
-              <span class="chart__day"> </span>
-              <div class="chart__point chart__pipe"></div>
+            <div class="chart__item">
+              <span class="chart__day"></span>
+              <div class="chart__pipe">0</div>
             </div>
           </li>
 
@@ -132,5 +132,5 @@
     </div>
   </body>
 
-<script type='module' src="./script/statistics.fe6c59bc37ebb7c1a40f.js"></script>
+<script type='module' src="./script/statistics.c8c1476748decfd8d93a.js"></script>
 </html>
