--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,10 +20,12 @@
       <!-- HEADER -->
       <header class="header">
         <div class="header__title">NewsAnalyzer</div>
-        <div class="header__menu">
-          <a class="header__menu-item header__menu-item_selected pointer" href="./index.html">Главная</a>
-          <a class="header__menu-item pointer" href="./about.html">О проекте</a>
-        </div>
+        <nav class="header__menu">
+          <ul class="nav">
+            <li class="nav__item"><a class="nav__link nav__link_selected pointer" href="./index.html">Главная</a></li>
+            <li class="nav__item"><a class="nav__link pointer" href="./about.html">О проекте</a></li>
+          </ul>
+        </nav>
       </header>
 
       <!-- ПОИСК НОВОСТЕЙ -->
@@ -112,7 +114,7 @@
 
       <div class="footer__icons">
         <a href="https://github.com/Aksestl">
-          <img class="footer__icon pointer" src="<%=require('../images/github.svg').default%>" alt="Github">
+          <img class="footer__icon pointer" src="<%=require('../images/GH.svg').default%>" alt="Github">
         </a>
         <a href="https://facebook.com/">
           <img class="footer__icon pointer" src="<%=require('../images/facebook.svg').default%>" alt="Facebook">
