--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -37,7 +37,7 @@
           <input 
           type="search" 
           required 
-          minlength="2"
+          minlength="1"
           name="news" 
           class="search__input" 
           placeholder="Введите тему новости">
@@ -69,7 +69,7 @@
 
         <div class="page__heading" >
           <h2 class="page__title">Результаты поиска</h2>
-          <a class="page__link" href="./statistics.html">Посмотреть аналитику &#62;</a>
+          <a class="page__link pointer" href="./statistics.html">Посмотреть аналитику &#62;</a>
         </div>
         
         <div class="news-list"></div>  <!-- контейнер карточек -->
