--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -113,7 +113,7 @@
       <section class="commit-history">
         <div class="page__heading page__heading_about">
           <h2 class="page__title">История коммитов из GitHub</h2>
-          <a class="page__link page__link_git" href="https://github.com/Aksestl/NewsAnalyzer">Открыть в Github &#62;</a>
+          <a class="page__link page__link_git pointer" href="https://github.com/Aksestl/NewsAnalyzer">Открыть в Github &#62;</a>
         </div>
 
         <div class="flickity">
