--- a/src/pages/statistics.html
+++ b/src/pages/statistics.html
@@ -17,7 +17,7 @@
 
       <!-- HEADER -->
       <header class="header">
-        <div class="header__title">NewsAnalyzer</div>
+        <div class="header__title header__title_black">NewsAnalyzer</div>
         <nav class="header__menu">
           <ul class="nav">
             <li class="nav__item"><a class="nav__link nav__link_black nav__link_selected-black pointer" href="./index.html">Главная</a></li>
