--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -91,7 +91,7 @@
         <h3 class="info__title">Об авторе</h3>
         <article class="info__article">
           <p class="info__paragraph">
-            Меня зовут - Аксенова Алена. В прошлом - юрист. В настоящем - начинающий фронтенд-разработчик.
+            Меня зовут Аксенова Алена. В прошлом - юрист. В настоящем - начинающий фронтенд-разработчик.
             Это мой дипломный проект.
           </p>
           <p class="info__paragraph">
