--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Aksenova Alena">
   <title>NewsAnalyzer</title>
   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./styles/styles.ca0fa5dd1aaab1f8eb23.css">
+  <link rel="stylesheet" href="./styles/index.84035ee588ca70290222.css">
 
 </head>
 
@@ -20,10 +20,12 @@
       <!-- HEADER -->
       <header class="header">
         <div class="header__title">NewsAnalyzer</div>
-        <div class="header__menu">
-          <a class="header__menu-item header__menu-item_selected pointer" href="./index.html">Главная</a>
-          <a class="header__menu-item pointer" href="./about.html">О проекте</a>
-        </div>
+        <nav class="header__menu">
+          <ul class="nav">
+            <li class="nav__item"><a class="nav__link nav__link_selected pointer" href="./index.html">Главная</a></li>
+            <li class="nav__item"><a class="nav__link pointer" href="./about.html">О проекте</a></li>
+          </ul>
+        </nav>
       </header>
 
       <!-- ПОИСК НОВОСТЕЙ -->
@@ -35,7 +37,7 @@
           <input 
           type="search" 
           required 
-          minlength="2"
+          minlength="1"
           name="news" 
           class="search__input" 
           placeholder="Введите тему новости">
@@ -67,7 +69,7 @@
 
         <div class="page__heading" >
           <h2 class="page__title">Результаты поиска</h2>
-          <a class="page__link" href="./statistics.html">Посмотреть аналитику &#62;</a>
+          <a class="page__link pointer" href="./statistics.html">Посмотреть аналитику &#62;</a>
         </div>
         
         <div class="news-list"></div>  <!-- контейнер карточек -->
@@ -82,20 +84,20 @@
     <!-- ИНФОРМАЦИЯ ОБ АВТОРЕ -->
     <section class="info info_author">
       <picture>
-        <source srcset="./images/avatar-ipad.png" media="(max-width: 1200px)">
-        <source srcset="./images/avatar-se.png" media="(max-width: 475px)">
-        <img class="info__img" src="./images/avatar.png" alt="author's photo">
+        <source srcset="./images/me_tiny.png" media="(max-width: 1000px)">
+        <img class="info__img" src="./images/me.png" alt="author's photo">
       </picture>
       <div class="info__about">
         <h3 class="info__title">Об авторе</h3>
         <article class="info__article">
           <p class="info__paragraph">
-            Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, 
-            чем вы занимаетесь, какими технологиями разработки владеете.    
+            Меня зовут Аксенова Алена. В прошлом - юрист. В настоящем - начинающий фронтенд-разработчик.
+            Это мой дипломный проект.
           </p>
           <p class="info__paragraph">
-            Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, 
-            и чем можете помочь потенциальным заказчикам.  
+            В нем использованы технологии: HTML, CSS, BEM, JavaScript, Git, Webpack. 
+            За время прохождения курса в Яндекс.Практикум сверстала простые одностраничные сайты, 
+            сделала адаптивную верстку, реализовала несколько проектов на JavaScript со сборками через Webpack. 
           </p>          
         </article>
       </div>
@@ -112,7 +114,7 @@
 
       <div class="footer__icons">
         <a href="https://github.com/Aksestl">
-          <img class="footer__icon pointer" src="./images/github.svg" alt="Github">
+          <img class="footer__icon pointer" src="./images/GH.svg" alt="Github">
         </a>
         <a href="https://facebook.com/">
           <img class="footer__icon pointer" src="./images/facebook.svg" alt="Facebook">
@@ -123,5 +125,5 @@
   </div>
 </body>
 
-<script type='module' src="./script/index.84edcfdf6a27bf4ec21a.js"></script>
+<script type='module' src="./script/index.dfe0b39615a14056407a.js"></script>
 </html>
